   names. The following faces have been added because of this:
   =magit-bisect-bad=, =magit-bisect-good=, =magit-bisect-skip=,
   =magit-blame-date=, =magit-blame-hash=, =magit-blame-heading=,
   =magit-blame-name=, =magit-blame-summary=, =magit-branch-current=,
   =magit-branch-local=, =magit-branch-remote=, =magit-diff-added=,
   =magit-diff-added-highlight=, =magit-diff-context=,
   =magit-diff-context-highlight=.

** ADDED =erc-button= face.

** CHANGED Change faces to stop using certain colors.

** CHANGED Change =gnus-signature= foreground to =fgdim=.

** CHANGED Change =message-header-xheader= foreground to =fgdim= and make it italic.

** CHANGED Change =mode-line= background and box color to =bgblue=.

** CHANGED Change =mode-line-buffer-id= foreground to =fggreen=.

** CHANGED Change =org-agenda-done= foreground to =fgorange=.

** CHANGED Remove =org-block-begin-line= background.

** CHANGED Remove =org-block-end-line= background.

** CHANGED Change =org-headline-done= foreground to =fgdim=.

** CHANGED Remove bold weight from =org-level-1=.

** CHANGED Change =org-level-2= foreground to =fgcyan= and remove bold weight.

** CHANGED Change =org-level-3= foreground to =fgred= and remove bold weight.

** CHANGED Change =org-level-4= foreground to =fgblue= and remove bold weight.

** CHANGED Change =org-level-5= foreground to =fgyellow= and remove bold weight.

** CHANGED Change =org-level-6= foreground to =fgpurple= and remove bold weight.

** CHANGED Change =org-level-7= foreground to =fgturquoise= and remove bold weight.

** CHANGED Change =org-level-8= foreground to =fgorange= and remove bold weight.

** CHANGED Remove =whitespace-tab= foreground and change underline to =bgbright=.

** CHANGED Change the foreground color of =diff-file-header= to bright and add bold weight

** REMOVED Stop using and remove certain colors for simplicity.

   Stop using and remove the following colors: =fgdim-1=, =fgdim-2=,