@@ -204,9 +204,12 @@
    `(magit-branch-local ((t (:foreground ,fgdefault :background ,bgmagenta :box (:color ,bgmagenta :line-width 2 :style nil)))))
    `(magit-branch-remote ((t (:foreground ,fgdefault :background ,bggreen :box (:color ,bggreen :line-width 2 :style nil)))))
    `(magit-diff-added ((t (:foreground unspecified :background unspecified :inherit diff-added))))
-   `(magit-diff-added-highlight ((t (:foreground unspecified :background unspecified :inherit diff-hl-insert))))
+   `(magit-diff-added-highlight ((t (:foreground unspecified :background unspecified :inherit magit-diff-added))))
    `(magit-diff-context ((t (:foreground unspecified :inherit shadow))))
    `(magit-diff-context-highlight ((t (:foreground unspecified :background ,bgdim :inherit magit-diff-context))))
+   `(magit-diff-file-heading ((t (:foreground unspecified :underline unspecified :inherit diff-file-header))))
+   `(magit-diff-removed ((t (:foreground unspecified :background unspecified :inherit diff-removed))))
+   `(magit-diff-removed-highlight ((t (:foreground unspecified :background unspecified :inherit magit-diff-removed))))
    `(magit-item-highlight ((t (:slant italic  :inherit unspecified))))
    `(magit-log-head-label-default ((t (:foreground ,fgdefault :background ,bgcyan :box (:color ,bgcyan :line-width 2 :style nil)))))
    `(magit-log-head-label-head ((t (:foreground ,fgdefault :background ,bgblue :box (:color ,bgblue :line-width 2 :style nil)))))
@@ -214,6 +217,9 @@
    `(magit-log-head-label-remote ((t (:foreground ,fgdefault :background ,bggreen :box (:color ,bggreen :line-width 2 :style nil)))))
    `(magit-log-head-label-tags ((t (:foreground ,fgdefault :background ,bgorange :box (:color ,bgorange :line-width 2 :style nil)))))
    `(magit-log-sha1 ((t (:foreground ,fgdefault :background ,bgblue :box (:color ,bgblue :line-width 2 :style nil)))))
+   `(magit-process-ng ((t (:foreground ,fgred :inherit unspecified))))
+   `(magit-process-ok ((t (:foreground ,fggreen :inherit unspecified))))
+   `(magit-section-heading ((t (:foreground ,fgturquoise :weight unspecified :height 1.3))))
    `(magit-section-title ((t (:foreground ,fgturquoise :inherit unspecified :height 1.8))))
    `(makefile-space ((t (:background ,bgpink))))
    `(markdown-header-face-1 ((t (:inherit org-level-1))))
